--- a/grid-project/index.html
+++ b/grid-project/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <header class="navbar">
         <div class="left">Patrick Star</div>
-        <nav class="right">
+        <nav class="right close">
           <a href="#work">Work</a>
           <a href="#contact">Contact</a>
           <a href="#dribble"><img src="./images/dribble_icon.png" alt="" /></a>
@@ -26,9 +26,9 @@
           <a href="#v"><img src="./images/v_icon.png" alt="" /></a>
         </nav>
         <div class="hamburger">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
         </div>
       </header>
 
