--- a/grid-project/index.html
+++ b/grid-project/index.html
@@ -73,5 +73,7 @@
 
       <footer class="footer">Designed by Patrick Stars</footer>
     </div>
+
+    <script src="./index.js"></script>
   </body>
 </html>
